# portfolio

./: .gitignore  404.html  README.md  angular.json  main-3XPCK2MM.js  main-42S3VOTL.js  package-lock.json  package.json  pyproject.toml  styles-DSVXMH74.css  styles-W2KZY3TH.css
assets/data/: projects.json
src/: index.html  styles.scss
src/app/: app.component.html  app.component.scss  app.component.ts  app.config.ts  app.routes.ts  customPreset.ts
src/app/about-me/: about-me.component.html  about-me.component.scss  about-me.component.ts
src/app/blog/: blog.component.html  blog.component.scss  blog.component.ts
src/app/certifications/: certifications.component.html  certifications.component.scss  certifications.component.ts
src/app/dto/: EducationItem.ts  ExperienceItem.ts  LatestItem.ts  SkillItem.ts  WhatIDoItems.ts
src/app/education/: education.component.html  education.component.scss  education.component.ts
src/app/experience/: experience.component.html  experience.component.scss  experience.component.ts
src/app/footer/: footer.component.html  footer.component.scss  footer.component.ts
src/app/home/: home.component.html  home.component.scss  home.component.ts
src/app/nav-bar/: nav-bar.component.html  nav-bar.component.scss  nav-bar.component.ts
src/app/project/: project.component.html  project.component.scss  project.component.ts
src/app/services/: data.service.ts
src/app/skills/: skills.component.html  skills.component.scss  skills.component.ts
src/app/social-media/: social-media.component.html  (+2 more)
src/dilankacli/: main.py
(+11 files in other folders)
