[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dilankacli"
version = "0.1.0"
dependencies = ['typer']
requires-python = ">=3.8"
authors = [
    { name = "Dilanka Rathnasiri", email = "rdilanka17@gmail.com" },
]
maintainers = [
    { name = "Dilanka Rathnasiri", email = "rdilanka17@gmail.com" },
]
description = "sample python cli tool built with typer"
readme = "README.md"
license = { file = "LICENSE" }

[project.scripts]
dilanka-cli= "dilankacli.main:app"
